--- a/estilos/style.css
+++ b/estilos/style.css
@@ -8,7 +8,7 @@
 }
 
 body, html {
-    background-color: #5f2c82;
+    background-image: linear-gradient(to bottom, #f6cf89, #030c12);
     height: 100vh;
     width: 100vw;
 }
@@ -31,9 +31,12 @@ section#login {
     height: 500px;
     border-radius: 20px;
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.564);
+
+    transition: width .3s, height .3s;
 }
 
 section#login > div#imagem {
+    display: block;
     background: #5f2c82 url(../imagens/imagem-login.jpg) no-repeat;
     background-size: cover;
     height: 200px;
