--- a/estilos/style.css
+++ b/estilos/style.css
@@ -48,3 +48,17 @@ section#login > div#formulario {
     padding: 10px;
 
 }
+
+main > section {
+    max-height: 90vh;
+    max-width: 90vw;
+}
+
+div#formulario > h1 {
+    text-align: center;
+    margin-bottom: 0.8em;
+}
+
+div#formulario > p {
+    font-size: 0.8em;
+}
