--- a/estilos/media-query.css
+++ b/estilos/media-query.css
@@ -7,6 +7,7 @@
 
     section#login {
         width: 80vw;
+        height: 350px;
     }
 
     section#login > div#imagem {
@@ -29,6 +30,7 @@
 
     section#login {
         width: 990px;
+        height: 400px;
     }
 
     section#login > div#imagem {
