--- a/estilos/style.css
+++ b/estilos/style.css
@@ -7,6 +7,16 @@
     box-sizing: border-box;
 }
 
+
+.material-symbols-outlined {
+  font-variation-settings:
+  'FILL' 1,
+  'wght' 400,
+  'GRAD' 0,
+  'opsz' 24
+}
+
+
 body, html {
     background-image: linear-gradient(to bottom, #f6cf89, #030c12);
     height: 100vh;
@@ -23,16 +33,14 @@ section#login {
     position: absolute;
     top: 50%;
     left: 50%;
-    transform: translate(-50%, -50%);
     overflow: hidden;
-
     background-color: white;
     width: 250px;
-    height: 500px;
+    height: 515px;
     border-radius: 20px;
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.564);
-
     transition: width .3s, height .3s;
+    transform: translate(-50%, -50%);
 }
 
 section#login > div#imagem {
@@ -61,4 +69,77 @@ div#formulario > h1 {
 
 div#formulario > p {
     font-size: 0.8em;
+    margin-bottom: 20px;
+}
+
+form > div.campo {
+    background-color: #302222;
+    border: 2px solid #302222;
+    width: 100%;
+    display: block;
+    height: 40px;
+    border-radius: 8px;
+    margin: 5px 0px;
+    color: #f6cf89;
+}
+
+div.campo > label {
+    display: none;
+}
+
+div.campo > span {
+    color: white;
+    font-size: 2em;
+    width: 40px;
+    padding: 5px;
+}
+
+div.campo > input {
+    background-color: #ffffff;
+    font-size: 1em;
+    width: calc(100% - 45px);
+    height: calc(100% - 2px);
+    border: 0px;
+    border-radius: 8px;
+    padding: 4px;
+    transform: translateY(-13px);
+}
+
+form > input[type=submit] {
+    display: block;
+    font-size: 1em;
+    width: 100%;
+    height: 40px;
+    background-color: #4c3334;
+    color: white;
+    border: none;
+    border-radius: 5px;
+}
+
+form > input[type=submit]:hover {
+    background-color: #845959;
+}
+
+form > a.botao {
+    display: block;
+    text-align: center;
+    font-size: 1em;
+    width: 100%;
+    height: 40px;
+    padding-top: 7px;
+    margin-top: 7px;
+    background-color: white;
+    border: 1px solid #4c3334;
+    border-radius: 5px;
+    text-decoration: none;
+    color: #4c3334;
+}
+
+form > a.botao:hover {
+    background-color: #845959;
+    color: white;
+}
+
+form > a.botao > span {
+    font-size: 1em;
 }
