--- a/estilos/style.css
+++ b/estilos/style.css
@@ -36,7 +36,7 @@ section#login {
     overflow: hidden;
     background-color: white;
     width: 250px;
-    height: 515px;
+    height: 525px;
     border-radius: 20px;
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.564);
     transition: width .3s, height .3s;
@@ -54,7 +54,7 @@ section#login > div#imagem {
 section#login > div#formulario {
     display: block;
     padding: 10px;
-
+    
 }
 
 main > section {
@@ -65,6 +65,7 @@ main > section {
 div#formulario > h1 {
     text-align: center;
     margin-bottom: 0.8em;
+    margin-bottom: 20px;
 }
 
 div#formulario > p {
@@ -114,6 +115,7 @@ form > input[type=submit] {
     color: white;
     border: none;
     border-radius: 5px;
+    margin-top: 10px;
 }
 
 form > input[type=submit]:hover {
